# devops-packaging

./: .env  EVIDENCE-LOGS.md  README.md
django-app/: .gitignore  README.md  env.development  env.example  env.staging  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
django-app/config/: wsgi.py
django-app/config/settings/: staging.py
django-app/config/testings/: base.py  development.py
django-app/core/: apps.py  urls.py  views.py
django-app/tests/: test_views.py
nodejs-app/: .gitignore  README.md  env.development  env.example  env.staging  eslintrc.json  gitignore  package-lock.json  package.json
nodejs-app/src/: app.js  index.js
nodejs-app/src/config/: env.js
nodejs-app/tests/: app.test.js
springboot-app/: .evn  env.example  gitignore  pom.xml  springboot-app-README.md
springboot-app/src/main/java/com/devops/: DevopsSpringApp.java  HomeController.java
springboot-app/src/main/resources/: application-dev.properties  application-staging.properties  application.properties
springboot-app/src/test/java/com/devops/: HomeControllerTest.java
